--- a/ngo/app/templates/base.html
+++ b/ngo/app/templates/base.html
@@ -20,7 +20,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="#home">
+      <a class="navbar-brand" href="/">
         <i class="fas fa-hands-helping me-2"></i>Helping Hands
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -29,35 +29,35 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="#home">Home</a>
+            <a class="nav-link active" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="{% url 'about' %}">About</a>  
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#work">Our Work</a>
+            <a class="nav-link" href="{% url 'our_work' %}">Our Work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#projects">Projects</a>
+            <a class="nav-link" href="{% url 'projects' %}">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#blog">Blog</a>
+            <a class="nav-link" href="{% url 'blog' %}">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#media">Media</a>
+            <a class="nav-link" href="{% url 'media' %}">Media</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
               Get Involved
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#volunteer">Volunteer</a></li>
-              <li><a class="dropdown-item" href="#donate">Donate</a></li>
+              <li><a class="dropdown-item" href="{% url 'volunteer' %}">Volunteer</a></li>
+              <li><a class="dropdown-item" href="{% url 'donate' %}">Donate</a></li>
               <li><a class="dropdown-item" href="#partner">Partner With Us</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link" href="{% url 'contact' %}">Contact</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'signin' %}">Sign In</a>
@@ -66,7 +66,7 @@
             <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
           </li>
         </ul>
-        <a href="#donate" class="btn btn-accent ms-lg-3">Donate Now</a>
+        <a href="{% url 'donate' %}" class="btn btn-accent ms-lg-3">Donate Now</a>
       </div>
     </div>
   </nav>
@@ -95,12 +95,12 @@
         <div class="col-lg-2 col-md-4 mb-4">
           <h5 class="mb-4">Quick Links</h5>
           <div class="footer-links">
-            <a href="#home">Home</a>
-            <a href="#about">About Us</a>
-            <a href="#work">Our Work</a>
-            <a href="#projects">Projects</a>
-            <a href="#blog">Blog</a>
-            <a href="#contact">Contact</a>
+            <a href="/">Home</a>
+            <a href="{% url 'about' %}">About Us</a>
+            <a href="{% url 'our_work' %}">Our Work</a>
+            <a href="{% url 'projects' %}">Projects</a>
+            <a href="{% url 'blog' %}">Blog</a>
+            <a href="{% url 'contact' %}">Contact</a>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mb-4">
@@ -117,8 +117,8 @@
         <div class="col-lg-3 col-md-4 mb-4">
           <h5 class="mb-4">Get Involved</h5>
           <div class="footer-links">
-            <a href="#donate">Donate</a>
-            <a href="#volunteer">Volunteer</a>
+            <a href="{% url 'donate' %}">Donate</a>
+            <a href="{% url 'volunteer' %}">Volunteer</a>
             <a href="#partner">Partner With Us</a>
             <a href="#careers">Careers</a>
             <a href="#fundraise">Fundraise</a>
