--- a/ngo/app/templates/base.html
+++ b/ngo/app/templates/base.html
@@ -41,7 +41,7 @@
             <a class="nav-link" href="{% url 'projects' %}">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'blog' %}">Blog</a>
+            <a class="nav-link" href="{% url 'blogs' %}">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'media' %}">Media</a>
@@ -99,7 +99,7 @@
             <a href="{% url 'about' %}">About Us</a>
             <a href="{% url 'our_work' %}">Our Work</a>
             <a href="{% url 'projects' %}">Projects</a>
-            <a href="{% url 'blog' %}">Blog</a>
+            <a href="{% url 'blogs' %}">Blog</a>
             <a href="{% url 'contact' %}">Contact</a>
           </div>
         </div>
