--- a/ngo/app/templates/about.html
+++ b/ngo/app/templates/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% load static %}
 
-{% block title %}About - Helping Hands{% endblock %}
+{% block title %}About | Helping Hands{% endblock %}
 
 {% block content %}
 
