--- a/ngo/app/templates/base.html
+++ b/ngo/app/templates/base.html
@@ -29,47 +29,71 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="/">Home</a>
+            <a class="nav-link" href="{% url 'index' %}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'about' %}">About</a>  
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'our_work' %}">Our Work</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'projects' %}">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'blogs' %}">Blog</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'media' %}">Media</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-              Get Involved
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="{% url 'volunteer' %}">Volunteer</a></li>
-              <li><a class="dropdown-item" href="{% url 'donate' %}">Donate</a></li>
-              <li><a class="dropdown-item" href="#partner">Partner With Us</a></li>
-            </ul>
+            <a class="nav-link" href="{% url 'about' %}">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'contact' %}">Contact</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'signin' %}">Sign In</a>
+
+          <!-- Others Dropdown -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="othersDropdown" role="button" data-bs-toggle="dropdown">
+              Others
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="{% url 'our_work' %}">Our Work</a></li>
+              <li><a class="dropdown-item" href="{% url 'projects' %}">Projects</a></li>
+              <li><a class="dropdown-item" href="{% url 'blogs' %}">Blog</a></li>
+              <li><a class="dropdown-item" href="{% url 'media' %}">Media</a></li>
+              <li><a class="dropdown-item" href="{% url 'volunteer' %}">Volunteer</a></li>
+            </ul>
           </li>
+
+          {% if user.is_authenticated %}
+            <!-- Authenticated Dropdown -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-capitalize" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown">
+                Hi, {{ user.role }}
+              </a>
+              <ul class="dropdown-menu dropdown-menu-end">
+                {% if user.role == 'admin' %}
+                  <li><a class="dropdown-item" href="{% url 'admin_dashboard' %}">Dashboard</a></li>
+                  <li><a class="dropdown-item" href="{% url 'task' %}">Task</a></li>
+                {% elif user.role == 'employee' %}
+                  <li><a class="dropdown-item" href="{% url 'employee_dashboard' %}">Dashboard</a></li>
+                  <li><a class="dropdown-item" href="{% url 'task' %}">Task</a></li>
+                {% elif user.role == 'volunteer' %}
+                  <li><a class="dropdown-item" href="{% url 'volunteer_dashboard' %}">Profile</a></li>
+                  <li><a class="dropdown-item" href="{% url 'task' %}">Task</a></li>
+                {% endif %}
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="{% url 'userlogout' %}">Logout</a></li>
+              </ul>
+            </li>
+          {% else %}
+            <!-- Guest Account Dropdown -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="accountDropdown" role="button" data-bs-toggle="dropdown">
+                Account
+              </a>
+              <ul class="dropdown-menu dropdown-menu-end">
+                <li><a class="dropdown-item" href="{% url 'signin' %}">Sign In</a></li>
+                <li><a class="dropdown-item" href="{% url 'signup' %}">Sign Up</a></li>
+              </ul>
+            </li>
+          {% endif %}
+
+          <!-- Donate Now Button -->
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+            <a href="{% url 'donate' %}" class="btn btn-accent ms-2">Donate Now</a>
           </li>
         </ul>
-        <a href="{% url 'donate' %}" class="btn btn-accent ms-lg-3">Donate Now</a>
       </div>
     </div>
-  </nav>
+  </nav>`
 
   <main id="main">
     {% block content %}{% endblock %}
@@ -141,6 +165,9 @@
       </div>
     </div>
   </footer>
+  <!-- Bootstrap Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
