--- a/ngo/app/templates/contact.html
+++ b/ngo/app/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% load static %}
 
-{% block title %}Contact | Helping Hands{% endblock %}
+{% block title %}Contact | Dis NGO's 4 Every1{% endblock %}
 
 {% block content %}
 
