--- a/ngo/app/templates/index.html
+++ b/ngo/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% load static %}
 
-{% block title %}Home | Helping Hands{% endblock %}
+{% block title %}Home | Dis NGO's 4 Every1{% endblock %}
 
 {% block content %}
     <!-- Hero Section -->
@@ -25,7 +25,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h3 class="mb-4">Who We Are</h3>
-                    <p>Helping Hands is a non-profit organization dedicated to improving lives and building sustainable communities through education, healthcare, and economic empowerment initiatives.</p>
+                    <p>Dis NGO's 4 Every1 is a non-profit organization dedicated to improving lives and building sustainable communities through education, healthcare, and economic empowerment initiatives.</p>
                     <p>Founded in 2010, we have impacted over 1 million lives across 15 countries through our various programs and initiatives. Our team of dedicated professionals and volunteers work tirelessly to create lasting change.</p>
                     <div class="row mt-4">
                         <div class="col-md-6 mb-3">
@@ -122,7 +122,7 @@
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="testimonial-card h-100">
-                        <p class="mb-4">"Thanks to Helping Hands, my daughter can now attend school regularly. The scholarship program has changed our lives forever."</p>
+                        <p class="mb-4">"Thanks to Dis NGO's 4 Every1, my daughter can now attend school regularly. The scholarship program has changed our lives forever."</p>
                         <div class="testimonial-author">
                             <img src="https://randomuser.me/api/portraits/women/32.jpg" alt="Testimonial Author">
                             <div>
@@ -146,7 +146,7 @@
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="testimonial-card h-100">
-                        <p class="mb-4">"Volunteering with Helping Hands has been the most rewarding experience of my life. Seeing the impact firsthand is incredible."</p>
+                        <p class="mb-4">"Volunteering with Dis NGO's 4 Every1 has been the most rewarding experience of my life. Seeing the impact firsthand is incredible."</p>
                         <div class="testimonial-author">
                             <img src="https://randomuser.me/api/portraits/women/68.jpg" alt="Testimonial Author">
                             <div>
@@ -397,7 +397,7 @@
                 <div class="row">
                     <div class="col-lg-6 mb-4 mb-lg-0">
                         <h3 class="mb-4">Our Story</h3>
-                        <p>Helping Hands was founded in 2010 by a group of passionate individuals who wanted to make a tangible difference in the lives of the less fortunate. What started as a small local initiative has grown into an international organization with operations in 15 countries.</p>
+                        <p>Dis NGO's 4 Every1 was founded in 2010 by a group of passionate individuals who wanted to make a tangible difference in the lives of the less fortunate. What started as a small local initiative has grown into an international organization with operations in 15 countries.</p>
                         <p>Our journey began with providing basic necessities to homeless individuals in our community. As we grew, we expanded our focus to address root causes of poverty through education, healthcare, and economic empowerment programs.</p>
                         <p>Today, we're proud to have impacted over 1 million lives through our various initiatives, and we're just getting started. Our work is made possible by the generosity of donors, the dedication of volunteers, and the resilience of the communities we serve.</p>
                     </div>
@@ -417,7 +417,7 @@
                             <div class="card-body text-center">
                                 <h5 class="card-title">Sarah Johnson</h5>
                                 <p class="text-primary mb-2">Founder & CEO</p>
-                                <p class="card-text">Sarah founded Helping Hands after witnessing the struggles of homeless individuals while working as a social worker.</p>
+                                <p class="card-text">Sarah founded Dis NGO's 4 Every1 after witnessing the struggles of homeless individuals while working as a social worker.</p>
                             </div>
                         </div>
                     </div>
