--- a/ngo/app/templates/media.html
+++ b/ngo/app/templates/media.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% load static %}
 
-{% block title %}Media | Helping Hands{% endblock %}
+{% block title %}Media | Dis NGO's 4 Every1{% endblock %}
 
 {% block content %}
 
