--- a/ngo/app/templates/our_work.html
+++ b/ngo/app/templates/our_work.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% load static %}
 
-{% block title %}Our Work | Helping Hands{% endblock %}
+{% block title %}Our Work | Dis NGO's 4 Every1{% endblock %}
 
 {% block content %}
 
