--- a/ngo/app/templates/payment_success.html
+++ b/ngo/app/templates/payment_success.html
@@ -7,7 +7,7 @@
         <div class="card-body">
             <h1 class="text-success"><i class="fas fa-check-circle"></i> Thank You!</h1>
             <p class="lead mt-3">Your payment was successful.</p>
-            <p>We appreciate your support for Helping Hands NGO.</p>
+            <p>We appreciate your support for Dis NGO's 4 Every1 NGO.</p>
             <hr>
             <a href="{% url 'index' %}" class="btn btn-primary mt-3">Return to Home</a>
         </div>
