--- a/ngo/app/templates/projects.html
+++ b/ngo/app/templates/projects.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% load static %}
 
-{% block title %}Projects | Helping Hands{% endblock %}
+{% block title %}Projects | Dis NGO's 4 Every1{% endblock %}
 
 {% block content %}
 
