--- a/ngo/app/templates/volunteer.html
+++ b/ngo/app/templates/volunteer.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% load static %}
 
-{% block title %}Volunteer | Helping Hands{% endblock %}
+{% block title %}Volunteer | Dis NGO's 4 Every1{% endblock %}
 
 {% block content %}
 
