--- a/ngo/app/templates/about.html
+++ b/ngo/app/templates/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% load static %}
 
-{% block title %}About | Helping Hands{% endblock %}
+{% block title %}About | Dis NGO's 4 Every1{% endblock %}
 
 {% block content %}
 
@@ -14,7 +14,7 @@
                 </div>
                 <div class="col-lg-6">
                     <h3 class="mb-4">Who We Are</h3>
-                    <p>Helping Hands is a non-profit organization dedicated to improving lives and building sustainable communities through education, healthcare, and economic empowerment initiatives.</p>
+                    <p>Dis NGO's 4 Every1 is a non-profit organization dedicated to improving lives and building sustainable communities through education, healthcare, and economic empowerment initiatives.</p>
                     <p>Founded in 2010, we have impacted over 1 million lives across 15 countries through our various programs and initiatives. Our team of dedicated professionals and volunteers work tirelessly to create lasting change.</p>
                     <div class="row mt-4">
                         <div class="col-md-6 mb-3">
