--- a/ngo/app/templates/blogs.html
+++ b/ngo/app/templates/blogs.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% load static %}
 
-{% block title %}Blogs | Helping Hands{% endblock %}
+{% block title %}Blogs | Dis NGO's 4 Every1{% endblock %}
 
 {% block content %}
 
