--- a/ngo/app/static/css/style.css
+++ b/ngo/app/static/css/style.css
@@ -1,6 +1,6 @@
 :root {
-  --primary-color: #2c3e50;
-  --secondary-color: #3498db;
+  --primary-color: black;
+  --secondary-color: gold;
   --accent-color: #e74c3c;
   --light-color: #ecf0f1;
   --dark-color: #2c3e50;
